--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=MSNL; Database=PatikaCodeFirstDb2; TrustServerCertificate=True; Trusted_Connection=True;"
-    
+    "DefaultConnection": "Server=MSNL;Database=SurvivorDb;Trusted_Connection=True;TrustServerCertificate=true"
   }
 }
